name:           GridFlowCover
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
author:         Rene
build-type:     Simple
cabal-version:  >=1.8

library
  exposed-modules:  Grid,
                    GFC_Diagrams,
                    FindTrails,
                    FindFlowCover
    
  build-depends:    base ==4.6.*, array ==0.4.*, vector ==0.10.*, 
                    diagrams-core == 1.0.*, diagrams-lib ==1.0.*, diagrams-svg ==1.0.*,
                    blaze-svg >=0.3.3 && <0.4,
                    extra >=1.0 && <1.1

  hs-source-dirs:   src
  extensions:       DoAndIfThenElse
  ghc-options:      -fwarn-missing-signatures
  other-modules:    

test-suite GFCTest
  type:            exitcode-stdio-1.0
  main-is:         GFCTest.hs
  ghc-options:     -Wall -rtsopts
  build-depends:  base >= 4, HTF > 0.9, HUnit, 
                  diagrams-core == 1.0.*, diagrams-svg ==1.0.*, diagrams-svg ==1.0.*,
                  array ==0.4.*, GridFlowCover
  other-modules:   
                   GridTest,
                   Test
  hs-source-dirs:  test
  extensions:       DoAndIfThenElse
