name:           GridFlowCover
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
author:         Rene
build-type:     Simple
cabal-version:  >=1.8

library
  exposed-modules:  
                    Grid,
                    FindTrails,
                    FindFlowCover,
                    GFC_Diagrams
  build-depends:    
                    base >=4.6 && < 5.0 , array >=0.4 && < 0.6, vector >= 0.10 && < 0.12,
                    diagrams-core == 1.*, diagrams-lib ==1.*, diagrams-svg ==1.*,
                    blaze-svg >=0.3.3 && <0.4,
                    extra >=1.0 && < 1.5
  hs-source-dirs:   src
  extensions:       DoAndIfThenElse
  ghc-options:      -fwarn-missing-signatures -O -fprof-auto

test-suite GFCTest
  type:            exitcode-stdio-1.0
  main-is:         GFCTest.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                  base >= 4, HTF > 0.9, array >=0.4 && < 0.6, HUnit,
                  diagrams-core == 1.*, diagrams-svg ==1.*, diagrams-svg ==1.*,
                  GridFlowCover
  other-modules:   
                   GridTest,
                   Test
  hs-source-dirs:  test
  extensions:      DoAndIfThenElse

executable GridFlowCoverSVG
  build-depends:   
                   base >= 4,
                   GridFlowCover
  hs-source-dirs:  main
  ghc-options:     -Wall -rtsopts
  main-is:         Main.hs
  other-modules:  

